--- a/portfolio/src/css/MiddleBox.css
+++ b/portfolio/src/css/MiddleBox.css
@@ -2,6 +2,6 @@
 	width: 40%;
 	height: 80%;
 	background-color: green;
-	margin: 0 8px; /* This assumes a small spacing between boxes */
+	margin: 0 8px; 
   }
   
